--- a/appmanifest.json
+++ b/appmanifest.json
@@ -5,7 +5,7 @@
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
-	"background_color": "#ffc7ca",
+	"background_color": "#621132",
 	"icons": [
 		{
 			"src": "icons/icon-16.png",
