--- a/appmanifest.json
+++ b/appmanifest.json
@@ -5,7 +5,7 @@
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
-	"background_color": "#a61e8b",
+	"background_color": "#2a074d",
 	"icons": [
 		{
 			"src": "icons/icon-16.png",
@@ -32,6 +32,5 @@
 			"sizes": "256x256",
 			"type": "image/png"
 		}
-	],
-	"theme_color": "#a61e8b"
+	]
 }
